syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloWorld";

package com.github.allure.extensions;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
